<resources>
    <string name="app_name">مقيـاس</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="food_high_BP">
        <b>الضغط المرتفع</b>
       \n	الامتناع عن تناول الملح.
\n	الإكثار من الخضروات الورقية الخضراء :فهي على نسبة عالية من البوتاسيوم. الذي يساعد الكليتين على التخلّص من المزيد من الصوديوم عن طريق التبوّل.\n تشمل هذه الخضراوات الجرجير، والكرنب، واللفت الأخضر، والسبانخ، والبنجر.
\n	التوت بأنواعه والفراولة : يعدّ التوت مصدراً غنيّاً بالمركّبات الطبيعية التي تسمى بالفلافونويد، حيث وجدت إحدى الدراسات أنّ تناول التوت قد يمنع ارتفاع ضغط الدم ويساعد على خفض ضغط الدم.

    </string>
    <string name="food_high_BP2">
       \n	الأسماك الدهنية: تعدّ الأسماك الدهنية مثل السلمون والماكريل مصدراً جيّداً بالبروتين والأوميغا3 التي تساعد على خفض ضغط الدم، وتقليل الالتهابات، وتقليل الدهون الثلاثية.
\nتناول البطاطس مشوية او مسلوقة فهي تمتص الاملاح.
\n	تجنب الأطعمة المحفوظة فهي تزيد الصوديوم.
\n	الكافيين: يعدّ الكافيين من المنبّهات الموجودة في الشاي، والقهوة، والكاكاو، وبعض المشروبات الغازية، حيث يعمل الكافيين على إثارة الجهاز العصبي المركزي، وزيادة معدّل ضربات القلب، ومعدّل الأيض، وضغط الدم، إلّا أنّ هذه الآثار مؤقّتة.
    </string>
    <string name="food_high_BP3">
        \n	الأطعمة المحتوية على فيتامين د: حيث يساعد فيتامين د على التحكّم بمستوى الكالسيوم في الدم وتنظيم ضغط الدم، ومن الأغذية التي تحتوي على فيتامين د الأسماك الدهنية والحليب.
\n	الإكثار من الأغذية الغنية بالبوتاسيوم : الموز ، الأفوكادو ، الشمام ، البطيخ ، الفطر ، التونا ، الفاصوليا.
\n	استبدال الشاي الأحمر بالشاي الأخضر فهو يساعد على خفض ضغط الدم.

    </string>
    <string name="food_low_suger1">
	<b>مستوى السكر منخفض (glucose <big>&lt; 70): </big></b>
    \n
    انت تعاني من نقص السكر في الدم.
    \n
<b>وجبة الإفطار</b>
    \n
    يجب عليك دائمًا تتناول وجبة الإفطار في أقرب وقت ممكن بعد الاستيقاظ، حيث قد تنخفض مستويات السكر في الدم أثناء الليل. \n
    من المستحسن الحد من تناول عصائر الفاكهة في الصباح والالتزام بالعصائر التي لا تحتوي على سكر مضاف، لأنها قد تتسبب في عدم استقرار مستويات السكر في الدم.\n
    <b>تشمل بعض خيارات الإفطار المثالية ما يلي: </b>
    \n-	بيض مسلوق وخبز كامل الحبوب.
    \n-	دقيق الشوفان مع التوت وبذور عباد الشمس والقرفة.
    \n-	زبادي يوناني مع التوت والعسل ودقيق الشوفان.
    \nالقرفة تساعد على تقليل مستويات السكر في الدم ويمكن رشها على العديد من أطعمة الإفطار.
    </string>
    <string name="food_low_suger2">
	<b>وجبة الغداء</b>
    \n
    نوصيك بتناول وجبة صغيرة غنية بالبروتين على الغداء.
    <b>يجب أن يكون الغداء وجبة صغيرة ولكنه مليء بالبروتين والدهون الصحية والكربوهيدرات المعقدة التي ستستمر في إطلاق الطاقة ببطء.
        بعض أفكار الغداء الجيدة لنقص السكر في الدم هي: </b>

    \n -	ساندويتش التونة أو الدجاج أو التوفو على خبز الحبوب الكاملة مع أوراق السلطة.
   \n -	سلطة الحمص والخضروات.
   \n -	سمك مشوي، بطاطا مخبوزة، وسلطة جانبية.
    <b>وجبة العشاء</b>
    \n يجب عليك أن تحافظ على وجباتك المسائية صغيرة.
    \nسيتضمن اختيار العشاء الجيد البروتين والكربوهيدرات المعقدة.
    <b>تشمل أفكار العشاء:</b>
    \n-	الدجاج أو التوفو مع الأرز البني والخضروات.
    \n-	سمك السلمون مع الخضار على البخار أو السلطة.
    \n-	يخنة الفاصوليا مع العدس والفاصوليا والحمص والطماطم المعلبة
    </string>
    <string name="food_low_suger3">
	<b> وجبات خفيفة</b>
\nيجب عليك محاولة تضمين وجبات خفيفة صغيرة ومغذية بين الوجبات للحفاظ على مستويات السكر في الدم ثابتة وضمان حصولك على ما يكفي من الفيتامينات والمعادن والدهون الصحية والبروتينات والكربوهيدرات الليفية في نظامك الغذائي.
تناول وجبة خفيفة في منتصف الصباح، وآخر بعد الظهر، وشيء صغير قريب من وقت النوم يمكن أن يساعد في الحفاظ على استقرار مستويات السكر في الدم طوال النهار والليل.
بعض خيارات الوجبات الخفيفة الصحية هي:
\n-	تفاحة صغيرة مع بضع شرائح من جبن الشيدر.
		\n-	موزة مع حفنة من المكسرات أو البذور.
		\n-	شريحة من الخبز المحمص الكامل مع الأفوكادو المهروس أو الحمص.
		\n-	حبوب كاملة تعلوها علبة صغيرة من السردين أو التونة.
		\n-	جزر، فلفل، خيار مغموس في الحمص.
		\n-	عصير الخضروات.
		\nإذا كنت من الذين يمارسون الرياضة بانتظام قد تحتاج إلى تناول الطعام بشكل متكرر، لأن النشاط البدني المستمر يمكن أن يتسبب في انخفاض مستويات السكر في الدم.
		يجب ان تناول وجبة خفيفة صغيرة تحتوي على الكربوهيدرات والبروتين قبل التمرين. تشمل الخيارات الجيدة ما يلي:
\n-	قطعة فاكهة أو حفنة من التوت والبسكويت من الحبوب الكاملة.
\n-	زبادي يوناني ممزوج بالتوت.
\n-	تفاحة مع ملعقة من زبدة الفول السوداني وشريحة من الجبن.
\n-	حفنة صغيرة من الفواكه المجففة والمكسرات.
\n-	زبدة الفول السوداني والساندويتش جيلي الخالية من السكر على خبز الحبوب الكاملة.
\nلا يُنصح بممارسة الرياضة على معدة ممتلئة، من المهم الحفاظ على الوجبات الخفيفة قبل التمرين وشرب الكثير من الماء.
    </string>
    <string name="food_normal_suger">
    <b>مستوى السكر طبيعي (glucose >= 70 and glucose &lt; 125):</b>
    \n
    انت تعاني من سكر طبيعي في الدم.
    الأطعمة الموصى بها
    <b>الكربوهيدرات الصحية</b>
    \n-	الفاكهة.
   \n -	خضروات.
    \n-	كل الحبوب.
    \n-	البقوليات مثل الفاصوليا والبازلاء.
    \n-	منتجات الألبان قليلة الدسم مثل الحليب والجبن.
    تجنب الكربوهيدرات الأقل صحة، مثل الأطعمة أو المشروبات التي تحتوي على الدهون والسكريات والصوديوم المضافة.
    <b>الأطعمة الغنية بالألياف</b>
    \n-	خضروات.
    \n-	الفاكهة.
    \n-	المكسرات.
    \n-	البقوليات مثل الفاصوليا والبازلاء.
    \n-	كل الحبوب.
    \n-	أسماك صحية للقلب.
</string>
    <string name="food_normal_suger2">
        تناول السمك الصحي للقلب مرتين أسبوعيًا على الأقل. الأسماك مثل السلمون والتونة والسردين غنية بأحماض أوميجا 3 الدهنية التي قد تمنع أمراض القلب وتجنب الأسماك المقلية والأسماك التي تحتوي على مستويات عالية من الزئبق.
<b>الدهون الجيدة</b>
\n-	افوكادو.
\n-	المكسرات.
\n-	زيوت الكنوا والزيتون والفول السوداني.
ولكن لا تبالغ في ذلك، لأن جميع الدهون غنية بالسعرات الحرارية.
الاطعمة التي يفضل تجنبها
\n-	الدهون المشبعة: تجنب منتجات الألبان الغنية بالدهون والبروتينات الحيوانية مثل الزبدة واللحم البقري والنقانق.
\n-	قم أيضًا بالحد من زيوت جوز الهند ونواة النخيل.
\n-	الدهون المتحولة: تجنب الدهون المتحولة الموجودة في الوجبات الخفيفة المصنعة والمخبوزات والسمن النباتي.
\n-	الكوليسترول: تشمل مصادر الكوليسترول منتجات الألبان عالية الدسم والبروتينات الحيوانية عالية الدهون وصفار البيض والكبد واللحوم الأخرى للأعضاء. استهدف ما لا يزيد عن 200 مليجرام من الكوليسترول يوميًا.
\n-	صوديوم: استهدف أقل من 2300 مجم من الصوديوم يوميًا.

    </string>
    <string name="food_normal_suger3">
<b>مثال لنظام غذائي</b>
<big>وجبة الإفطار</big>
\n-	 الحبوب الكاملة مع الفاكهة.
\n-	الفطائر الكاملة.
\n-	الكعك الإنجليزي.
\n-	بيض بالخضار مثل السبانخ أو البروكلي.
\n-	 الحليب قليل الدسم أو حليب الصويا.
\n-	زبادي خالي أو قليل الدسم مع الفواكه أو الحبوب.
-	الأفوكادو.
\n-	المكسرات.
\n-	 زيت الزيتون البكر وزيت الكنوا.
<big>وجبة الغداء</big>
\n-	ساندويتش خبز الحبوب الكاملة أو خبز التورتيلا مع شرائح الديك الرومي المشوي، أو صدور دجاج بدون جلد، أو تونة خفيفة غير مالحة، أو شريحة جبن منزوع الدسم وقليل الملح.
\n-	 الحمص مع خبز الحبوب الكاملة والخضروات.
\n-	فاصوليا باللحم منزوع الدهن مع الخضروات.
\n-	 سلطة خضراء بالخس أو الأفوكادو.

    </string>
    <string name="food_normal_suger4">
<big>وجبة العشاء</big>
        \n
\n-	الحبوب المطبوخة مثل الأرز البني أو الكنوا أو الشعير أو البرغل.
\n-	خبز القمح الكامل أو التورتيلا.
\n-	 الخضروات الداكنة.
\n-	الفاكهة الطازجة المختلفة.
\n-	السمك المشوي أو المطبوخ.
\n-	 دجاج بدون جلد أو دهون.
\n-	جبن منزوع الدسم.
\n-	المكسرات أو الأفوكادو.
    </string>
    <string name="food_high_suger">
        <b>	مستوى السكر مرتفع (glucose >= 125):</b>
انت تعاني من سكر عالي في الدم.\n
فيما يلي بعض أفضل الأطعمة للحفاظ على مستويات السكر في الدم الصحية.\n
1. قمح كامل أو خبز النيكل
العديد من أنواع الخبز غنية بالكربوهيدرات وترفع مستويات السكر في الدم بسرعة. نتيجة لذلك، يجب تجنب العديد من انواع الخبز.
ونوصيك بتناول خبز pumpernickel وخبز القمح الكامل المطحون بالحجر بنسبة 100 في المئة.
2. معظم الفواكه: تستطيع ان تتناول على سبيل المثال الفواكه الكاملة، خاصة العنب البري والعنب والتفاح ولكن باستثناء الأناناس والبطيخ.\n
3. البطاطا والبطاطا الحلوة: تتمتع البطاطس العادية بدرجة عالية من معدل السكريات، ولكن البطاطا الحلوة والبطاطس ذات درجات منخفضة وهي مغذية للغاية.\n
يمكنك استبدال البطاطا الحلوة أو البطاطا الحلوة بالبطاطس في مجموعة متنوعة من الأطباق.\n
    </string>
    <string name="food_high_suger2">

4. دقيق الشوفان ونخالة الشوفان:
الشوفان يساعد في الحفاظ على التحكم في نسبة السكر في الدم.
ولكن نوصيك ايضا بالحد من استهلاكهم من دقيق الشوفان لأن 1 كوب يحتوي على ما يقرب من 28 جرامًا من الكربوهيدرات.\n
5. معظم المكسرات
تناول المكسرات الغنية جدًا بالألياف الغذائية والبروتينات النباتية والأحماض الدهنية غير المشبعة والمواد المغذية الأخرى.\n
    \n6. البقوليات: تناول البقوليات مثل الفاصوليا والبازلاء والحمص والعدس.
    تجنب منتجات البقوليات التي تحتوي على السكريات المضافة والنشويات البسيطة، مثل تلك الموجودة في الشراب أو الصلصات أو التتبيلة.
    7. الثوم: يمكنك تناول الثوم نيئًا أو إضافته إلى السلطات أو استخدامه في الوجبات المطبوخة.\n

    </string>
    <string name="food_high_suger3">
    \n8. أسماك المياه الباردة: لا تحتوي الأسماك واللحوم الأخرى على درجات في الجهاز الهضمي لأنها لا تحتوي على الكربوهيدرات.
    ومع ذلك، قد تساعد أسماك المياه الباردة على التحكم في مرض السكري بشكل أفضل من أنواع اللحوم الأخرى.
    9. الزبادي: تناول الزبادي العادي يوميًا ويمكن أن يكون الزبادي على الطريقة اليونانية بديلاً صحيًا.\n
    من الأفضل تجنب الزبادي المحلاة أو المنكهة، والتي غالبًا ما تحتوي على الكثير من السكر.\n\n
        طرق أخرى لخفض مستويات السكر في الدم
    \n-	البقاء رطبًا من خلال شرب الكثير من السوائل الصافية.
    \n-	تناول كميات صغيرة بشكل متكرر.
    \n-	عدم تخطي الوجبات.
    </string>
    <string name="food_pot_safe">
        <b>الأطعمة لإضافتها إلى نظامك الغذائي</b>
       <b> تذكر أن جميع الأطعمة تحتوي على بعض البوتاسيوم. حجم الوجبة مهم جدا.\
           n يمكن أن تتحول كمية كبيرة من الطعام منخفض البوتاسيوم إلى طعام يحتوي على نسبة عالية من البوتاسيوم. تناول مجموعة متنوعة من الأطعمة ولكن باعتدال.\n</b>
        \nتعتبر الأطعمة منخفضة في البوتاسيوم إذا كانت تحتوي على 200 ملليغرام (ملغ) أو أقل لكل وجبة.\n
        <b>تتضمن بعض الأطعمة منخفضة البوتاسيوم.</b>
        \n
        الفواكه: الفراولة والتوت، تفاح، جريب فروت، الموز، الشمام، الكيوي، الخوخ، البرتقال والبطيخ.\n
        الخضروات: البطاطا (العادية والحلوة)، القرنبيط، الكرفس، بروكلي، الباذنجان، فاصوليا خضراء، الفلفل الأخضر، الجزر، الفطر، الذرة الحلوة، الطماطم.\n
        وأيضًا: أرز أبيض، المعكرونة البيضاء، خبز ابيض، التونا، سمك السالمون، الجمبري، سرطان البحر، المحار.\n
    </string>
    <string name="male_60s">
        ,لا يتناسب مع عمر الـ ٦٠ ممارسة الرياضية العنيفة، \n وينصح بأن تبقى بعيد عن التمارين عالية الكثافة.
        بالمقابل يمكنك أداء تمارين بسيطة لتحسين جودة الحياة والحفاظ على صحة جسم أفضل.\n
ينصح بأداء رياضة المشي الخفيف
<b>(Pilates)  البيلاتس </b>
هي عبارة عن مجموعة من التمرينات التي تُركز على تقوية الجسم وتحسين اللياقة العامة\n
    </string>
    <string name="male_60s2">
        \n
من أنواعها:
<b> تدريب المئات Hundreds </b>
\nاستلق على ظهرك على حصيرة، ارفع ساقيك إلى أعلى مع فرد ركبتيك بشكل مستقيم وقم برفع كتفيك ورأسك على السجادة، ومد ذراعيك إلى الأمام مباشرة، وحركهم لأعلى ولأسفل أثناء التنفس لمدة خمس ثوانٍ وخمس ثوانٍ، أكمل عشرة شهيق وعشرة زفير، ليصبح المجموع 100 ثانية من التنفس.
\n<b> Bridge Roll-Up تمرين</b>
 يساعد هذا التمرين على تنسيق عضلات الحوض وأسفل الظهر، ويشمل  الاستلقاء على ظهرك مع تثبيت القدمين  وثني الركبتين، قم بالزفير وأمل الحوض إلى الخلف، مع ضغط على أسفل الظهر إلى الأرض، \nوانتظر لمدة أربع ثوان قبل أن تعود ببطء على الأرض.
    </string>
    <string name="male_60s3">
\n<b> Roll Up تمرين</b>
    يستخدم هذا التمرين عادةً كفترة انتقالية بين التمارين المختلفة،الاستلقاء على ظهرك مع تثبيت
    القدمين  وثني الركبتين، وجه ذراعيك مباشرة نحو قدميك،\n
        ثم فم بالزفير وحرك ذراعيك للأمام  مع استخدام الرأس والكتفين، ثم استلقي ببطء مرة أخرى وقم بالاستنشاق
        \n

واليوغا مرة في الأسبوع على الأقل.\n
\nتجدر الإشارة إلى أن معظم الاشخاص الذين لا يعانون من أية مشاكل صحية يمكنهم ممارسة التمارين الرياضية بمستويات متوسطة بدون أية مشكلة.
\nلكن علينا الحذر عند وجود بعض المشكلات الصحية مثل السكري، أمراض القلب، والتهاب المفاصل والتي يجب في حال وجودها سؤال الطبيب المختص قبل البدء بالتمارين الرياضية لتحديد المناسب منها

</string>
</resources>